--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Gympass style app.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/server.ts",
+    "build": "tsup src --out-dir build",
+    "start": "node build/server.js"
   },
   "repository": {
     "type": "git",
