--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/ManoelEric1212/Ignite-4-solid#readme",
   "devDependencies": {
+    "@rocketseat/eslint-config": "1.2.0",
     "@types/node": "^18.15.13",
+    "eslint": "8.38.0",
     "tsup": "^6.7.0",
     "tsx": "^3.12.6",
     "typescript": "^5.0.4"
